# fytti

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.html
fytti-app/: Cargo.toml
fytti-app/src/: input.rs  main.rs  registry.rs
fytti-app/tests/: screenshot_test.rs
fytti-css/: Cargo.toml
fytti-css/src/: lib.rs
fytti-html/: Cargo.toml
fytti-html/src/: lib.rs
fytti-layout/: Cargo.toml
fytti-layout/src/: lib.rs
fytti-render/: Cargo.toml
fytti-render/src/: display_list.rs  glyph.wgsl  glyph_atlas.rs  gpu.rs  lib.rs  rect.wgsl  text_overlay.wgsl
fytti-swf/: Cargo.toml
fytti-swf/src/: lib.rs  parser.rs  render.rs  types.rs
fytti-wasm/: Cargo.toml
fytti-wasm/src/: backend.rs  lib.rs  runner.rs
inbox/: frame-yield-confirmed.md  hermytt-registry-answers.md  hermytt-registry.md  interactive-demo-ready.md  new-apis-and-showcase.md  viewport-size-done.md  wytti-host-api.md
tests/: create_test_swf.py
tests/fixtures/: basic-text.html  colors-and-boxes.html  heading-sizes.html  nested-layout.html  resize-stress.html
