[package]
name = "fytti-app"
version = "0.1.0"
edition = "2021"

[dependencies]
fytti-html.workspace = true
fytti-css.workspace = true
fytti-layout.workspace = true
fytti-render.workspace = true
fytti-wasm.workspace = true
fytti-swf.workspace = true
wytti-host = { path = "../../wytti/wytti-host" }
winit = "0.30"
pollster = "0.4"
softbuffer = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"

[dev-dependencies]
png = "0.17"
